internal/gatewayapi/testdata/extensions/httproute-with-mixed-backends.in.yaml
gateways:
- apiVersion: gateway.networking.k8s.io/v1
  kind: Gateway
  metadata:
    namespace: envoy-gateway
    name: gateway-1
  spec:
    gatewayClassName: envoy-gateway-class
    listeners:
    - name: http
      protocol: HTTP
      port: 80
      hostname: "*.envoyproxy.io"
      allowedRoutes:
        namespaces:
          from: All
httpRoutes:
- apiVersion: gateway.networking.k8s.io/v1
  kind: HTTPRoute
  metadata:
    namespace: default
    name: httproute-1
  spec:
    hostnames:
    - gateway.envoyproxy.io
    parentRefs:
    - namespace: envoy-gateway
      name: gateway-1
      sectionName: http
    rules:
    - matches:
      - path:
          value: "/service"
      backendRefs:
      - name: service-1
        port: 8080
    - matches:
      - path:
          value: "/s3"
      backendRefs:
      - group: storage.example.io
        kind: S3Backend
        name: s3-backend
        port: 443
      - name: service-2
        port: 8080
services:
- apiVersion: v1
  kind: Service
  metadata:
    namespace: default
    name: service-1
  spec:
    clusterIP: 10.11.12.13
    ports:
    - port: 8080
      name: http
      protocol: TCP
      targetPort: 3000
- apiVersion: v1
  kind: Service
  metadata:
    namespace: default
    name: service-2
  spec:
    clusterIP: 10.11.12.14
    ports:
    - port: 8080
      name: http
      protocol: TCP
      targetPort: 3000
extensionRefFilters:
- apiVersion: storage.example.io/v1alpha1
  kind: S3Backend
  metadata:
    name: s3-backend
    namespace: default
  spec:
    bucket: my-s3-bucket
    region: us-west-2
    endpoint: s3.amazonaws.com
